@@ -39,6 +39,7 @@ priv_open(char *file)
 	len = strlen(file);
 	must_write(PRIV_UNPRIVILEGED, &len, sizeof(int));
 	must_write(PRIV_UNPRIVILEGED, file, len + 1);
+	priv_wait();
 	must_read(PRIV_UNPRIVILEGED, &rc, sizeof(int));
 	if (rc == -1)
 		return rc;
@@ -55,6 +56,7 @@ priv_ethtool(char *ifname, void *ethc, size_t length)
 	len = strlen(ifname);
 	must_write(PRIV_UNPRIVILEGED, &len, sizeof(int));
 	must_write(PRIV_UNPRIVILEGED, ifname, len + 1);
+	priv_wait();
 	must_read(PRIV_UNPRIVILEGED, &rc, sizeof(int));
 	if (rc != 0)
 		return rc;
