@@ -3,6 +3,9 @@ lldpd (0.7.8)
     + Don't hard-code default values for system name, system
       description and port description. When the field is not present,
       just don't display it.
+  * Features:
+    + Add the possibility to disable privilege separation (lower
+      memory consumption, lower security, don't do it).
 
 lldpd (0.7.7)
   * Features:
